# rust_server

./: Cargo.toml  Containerfile  Containerfile_alpine  Containerfile_deb  Containerfile_debian  Containerfile_speed  Containerfile_test  Containerfile_test2  LICENSE  Makefile  Makefile.simple  Makefile.toml  README.md  toto
src/: apiresponse.rs  hello.rs  lib.rs  main.rs  main.rs.v2  upload.rs
tests/: api_tests.rs  hello_tests.rs
