[package]
name = "rust_server"
version = "0.1.0"
edition = '2024'

[dependencies]
axum = { version = "0.8.8", features = ["multipart"] }
axum-server = { version = "0.8.0" }
tokio = { version = "1.50.0", features = ["full"] }
tracing = { version = "0.1.44" }
tracing-subscriber = { version = "0.3.23" }
tower = { version = "0.5.3" }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
reqwest = { version = "0.13.2" }

