[package]
name = "rust_server"
version = "0.1.0"
edition = '2024'

[dependencies]
axum = { version = "0.8.8", features = ["multipart"] }
axum-server = { version = "0.8.0" }
tokio = { version = "1.50.0", features = ["full"] }
tracing = { version = "0.1.44" }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.1", features = ["trace", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http-body-util = "0.1.3"

[dev-dependencies]
reqwest = { version = "0.13.2" }

